# web-flutter

./: .gitignore  DEFENSE_GUIDE.docx  README.md  pubspec.yaml  run.bat
docs/: API.md  ARCHITECTURE.md  DEFENSE_GUIDE.md  DEVELOPMENT.md
lib/: main.dart
lib/models/: schedule_lesson.dart  schedule_target.dart
lib/services/: date_range.dart  ruz_api_client.dart
lib/state/: schedule_controller.dart
lib/ui/screens/: home_screen.dart  schedule_screen.dart
lib/ui/widgets/: api_settings_sheet.dart  empty_state.dart  lesson_card.dart  schedule_week_grid.dart  target_search_panel.dart
test/: schedule_lesson_test.dart
tool/: ruz_proxy_server.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  flutter_window.cpp  main.cpp  utils.cpp  win32_window.cpp  win32_window.h
